[bugfix] Tab hide scrollbar

--- a/packages/vant-css/src/tab.css
+++ b/packages/vant-css/src/tab.css
@@ -77,7 +77,7 @@ $van-tabs-card-height: 28px;
 
       &::-webkit-scrollbar {
         display: none;
-        background-color: transparent;
+        background: transparent;
       }
     }
   }
